samples/_failures_safe/1761376210_0064ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d14cd8b.c: In function ‘main’:
./samples/SAFE/__tmp_8d14cd8b.c:127:9: error: expected declaration or statement at end of input
  127 |         }
      |         ^
./samples/SAFE/__tmp_8d14cd8b.c:127:9: error: expected declaration or statement at end of input
